# clippyme

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  app.py  clip_endpoints.py  compose.py  config_store.py  deepgram_transcribe.py  docker-compose.gpu.yml  docker-compose.yml  editor.py  gemini_parser.py  hooks.py  job_results.py  job_worker.py  main.py  pyproject.toml  requirements.txt  s3_uploader.py  schemas.py  smartcut.py  social_publisher.py  subtitles.py
.githooks/: pre-commit
.github/workflows/: ci.yml
dashboard/: .gitignore  Dockerfile  eslint.a11y.config.js  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
dashboard/design-ref/: DESIGN_README.md  chat1.md
dashboard/design-ref/clippyme-ui/: app.css  app.jsx  captions.jsx  chrome.jsx  create.jsx  data.jsx  index.html  primitives.jsx  processing.jsx  publish.jsx  results.jsx  tokens.css  views.jsx
dashboard/src/: App.jsx  Landing.jsx  config.js  index.css  main.jsx
dashboard/src/components/: BatchPublishModal.jsx  HistoryTab.jsx  HookModal.jsx  IdleHero.jsx  KeyInput.jsx  LogsPanel.jsx  MediaInput.jsx  PipelineSteps.jsx  ProcessingAnimation.jsx  ProcessingView.jsx  PublishModal.jsx  ResultCard.jsx  ResultsGrid.jsx  SaaShortsTab.jsx  SubtitleModal.jsx  TopNav.jsx
dashboard/src/hooks/: useBackendStatus.js  useClipStates.js  useClipStates.test.jsx  useHistory.js  (+3 more)
docs/: auto-vertical-reframe-analysis.md  autocrop-vertical-analysis.md  clipsai-analysis.md  fable5-improvement-log.md  flycut-caption-analysis.md  freecut-analysis.md  montage-ai-analysis.md  reframe-improvements-research.md  smart-reframe-analysis.md  smart-video-reframe-analysis.md  videolingo-analysis.md
reframe-research/: autocrop-paulpierre.md  autocrop-vertical-kamilstanuch.md  autoshorts-divyaprakash.md  katna-keplerlab.md  latent-reframe.md  poor-mans-reframing-gopro.md  retargetvid-bmezaris.md  short-video-maker-leke-adewa.md  smart-video-reframe-obi19999.md
scripts/: parse_path_stats.py
src/clippyme/: schemas.py
tests/: conftest.py  test_backend_fixes.py  test_gemini_parsing.py  test_job_results_helpers.py  test_smartcut.py  test_social_publisher.py  test_url_utils.py
tests/api/: test_client_ip_proxy.py  test_config_routes.py  test_job_controls.py  test_process_upload.py  test_reframe_aspect_api.py  test_schema_overlay_bounds.py  test_security.py  test_ssrf_and_traversal.py  test_status_logs_slice.py  test_zernio_schema.py
tests/domain/: test_clip_locks.py  test_compose.py  test_concurrency_fixes.py  test_errors.py  test_history_service.py  test_hooks_style.py  test_job_artifacts.py  test_job_journal.py  test_job_results.py  test_smartcut_cache.py  test_smartcut_manual_trim.py  test_smartcut_ops.py  test_subtitle_split.py  test_subtitles_injection.py  test_uploads.py
tests/integrations/: test_auto_editor_updater.py  test_social_publisher.py
tests/pipeline/: test_cut_ops.py  test_deepgram_transcribe.py  test_download.py  test_elevenlabs_transcribe.py  test_gemini_parser.py  test_job_control.py  test_main_bugfixes.py  test_main_optimizations.py  test_media_probe.py  test_postprocess.py  test_reframe_follow.py  test_reframe_global_smooth.py  test_reframe_mar.py  test_reframe_ops.py  test_reframe_scene_reset.py  test_reframe_subject_smooth.py  test_reframe_track.py  test_texttiling_ops.py
tests/storage/: test_config_store.py
(+81 files in other folders)
