[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clippyme"
version = "0.0.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Heavy pipeline tests (cv2/mediapipe/yt-dlp runtime) live behind the Docker
# backend image; the pure-logic suites (api, domain, integrations, parser)
# run on the host with just `pip install -e .` + pytest.
#
# Tests that import clippyme.pipeline.main (pulls cv2/scenedetect/mediapipe)
# or otherwise need the heavy runtime are marked `integration`. Run the fast
# host suite with `pytest -m "not integration"`; run everything in Docker.
markers = [
    "integration: requires the heavy CV/ML runtime (cv2, scenedetect, mediapipe); run in Docker",
]
